syntax = "proto3";
// Package ipc describes all the messages used for inter-process
// communication between the different microservices in liwords
// (so far, just the API and the socket server).
// Many of these messages end up being transmitted to the front-end.
package ipc;

message ChatMessage {
  string username = 1;
  string channel = 2;
  string message = 3;
  // timestamp is in milliseconds!
  int64 timestamp = 4;
  string user_id = 5;
  string id = 6;
  // these are only loaded by specific endpoints.
  string country_code = 7;
  string avatar_url = 8;
}

message ChatMessages { repeated ChatMessage messages = 1; }

message ChatMessageDeleted {
  string channel = 1;
  string id = 2;
}
